# okulekrano

./: Cargo.toml  README.md
src/: capturer.rs  config.rs  glasses.rs  main.rs  mode_refresh.rs  renderer.rs  shader.frag  shader.vert  shader.wgsl  winit_app.rs
src/capturer/: fake.rs  texture.rs  wayland.rs
