[package]
name = "ar-glass-screen"
version = "0.1.0"
edition = "2021"

[dependencies]
ahrs = "0.7.0"
ar-drivers = "0.4.3"
drm-fourcc = "2.2.0"
env_logger = "0.11.5"
glium = { version = "0.36.0", default-features = false, features = ["glutin_backend"] }
glutin-winit = { version = "0.5.0", default-features = false, features = ["egl", "wayland"] }
khronos-egl = { version = "6.0.0", features = ["static"] }
log = "0.4.22"
nalgebra = "0.33.2"
wayland-client = "0.31.7"
wayland-protocols = { version = "0.32.5", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.5", features = ["client"] }
winit = { version = "0.30.4", default-features = false, features = ["wayland"] }

[patch.crates-io]
