[package]
name = "okulekrano"
description = "Virtual screen for AR glasses"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/tana/okulekrano"
repository = "https://github.com/tana/okulekrano"
readme = "README.md"
keywords = ["ar", "wayland"]
authors = ["Satoshi Tanaka <overthere555@gmail.com>"]

[dependencies]
ahrs = "0.7.0"
ar-drivers = "0.4.3"
confy = "0.6.1"
ctrlc = { version = "3.4.5", features = ["termination"] }
drm-fourcc = "2.2.0"
env_logger = "0.11.5"
glium = { version = "0.36.0", default-features = false, features = ["glutin_backend"] }
glutin-winit = { version = "0.5.0", default-features = false, features = ["egl", "wayland"] }
khronos-egl = { version = "6.0.0", features = ["static"] }
log = "0.4.22"
nalgebra = "0.33.2"
serde = { version = "1.0.214", features = ["derive"] }
wayland-client = "0.31.7"
wayland-protocols = { version = "0.32.5", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.5", features = ["client"] }
winit = { version = "0.30.4", default-features = false, features = ["wayland"] }

[patch.crates-io]
